# Image_data

./: 1.2_right_oblique_sphere.ipynb  1.3_four_elements_other subjects.ipynb  1.3_four_elements_structure of the sublunar world.ipynb  1.4_1.6_daily_rotation.ipynb  1.4_1.6_eighth_sphere_motion.ipynb  1.4_1.6_geotemporal_test_heavnes_motion-Copy1.ipynb  1.4_1.6_heavnes_motion.ipynb  1.7_apparent_size_stars.ipynb  1.7_heavens_spherical.ipynb  1.7_isoperimetry.ipynb  1.7_refraction.ipynb  1.7_sphericity_heavens3.ipynb  3.1_rising_setting.ipynb  3.2_ascensions.ipynb  3.3_sun_days.ipynb  3.4_zenith_shadows.ipynb  4.2_planetary motion.ipynb  4_eclipses.ipynb  Lunar_Eclipse.ipynb  Query_parts.sparql  README.md  Sphere definition.ipynb  Theorica_session_Nov24.ipynb  Untitled.ipynb  VT_1.1_sphere_definition.xlsx  VT_1.2_right_and_oblique_spheres.xlsx  VT_1.3_COMPLETEoverwritten_structure of the sublunar world clusters.xlsx  VT_1.4_daily_rotation_clusters_tags_3.1.25.xlsx  VT_1.4_eighth_sphere_motion_3.1.25.xlsx  VT_1.7_sphericity_heavens_clusters.xlsx  all_elements_with_artefacts_marked.sparql  all_parts_with_type.ipynb  app_components.py  ascensions.xlsx  being_in_a_sign.ipynb  being_in_a_sign.xlsx  book_viz_level_dec24.ipynb  celestial_circles.ipynb  celestial_circles.xlsx  celestial_circles_backup.ipynb  (+67 more)
.ipynb_checkpoints/: Disciplines-checkpoint.ipynb  books_query-checkpoint.sparql  clusters-checkpoint.ipynb  defined_image_corpus-checkpoint.ipynb  df_with_part_type-checkpoint.ipynb  images and books-checkpoint.ipynb  images_related_to_100_100-checkpoint.ipynb  (+1 more)
(+4 files in other folders)
